[package]
name = "sx1255-utils"
version = "0.2.1"
license = "GPLv3"
description = "Utilities for working with the M17 SX1255 HAT"
readme = "README.md"
repository = "https://github.com/rxt1077/sx1255-utils"
authors = ["Ryan Tolboom <ryan.tolboom@njit.edu>"]
edition = "2024"

[dependencies]
alsa = "0.9.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
gpio-cdev = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
spidev = "0.7.0"
toml = "0.8.20"
zmq = "0.10.0"
